Flyout menu: Attempt to fix header bug on mobile

--- a/styles/layout/header.css
+++ b/styles/layout/header.css
@@ -36,7 +36,7 @@
 	}
 
 	.hd-search {
-		@apply flex-grow max-w-screen-xsm md:ml-2 xxl:ml-6 xxxl:ml-12;
+		@apply flex-grow max-w-screen-xsm ml-1 md:ml-2 xxl:ml-6 xxxl:ml-12;
 	}
 
 	.hd-login {
